<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Simpan semua kenangan istimewa yang tak terlupakan untuk kehidupan yang akan datang</string>
    <string name="title_welcome_page">Story App</string>
    <string name="title_signup_page">Buat Akun Untuk Mulai Bercerita!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukan akunmu dulu ya</string>
    <string name="title_login_page">Ayo Bagikan Ceritamu!</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Happy Reading!.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="menu_logout">Menu Logout</string>
    <string name="name_story">Name</string>
    <string name="desc_story">Description</string>
    <string name="select_language">Ganti Bahasa</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="upload">Unggah</string>
    <string name="login_success">Anda berhasil login. Ayo kita mulai buat cerita</string>
    <string name="congratulation">Selamat!</string>
    <string name="empty_image_warning">Masukan terlebih dahulu gambar</string>
    <string name="add_story">Tambahkan cerita anda</string>
    <string name="enter_valid_email">Email tidak sesuai</string>
    <string name="pass_check">Password tidak boleh kurang dari 8 karakter</string>
    <string name="register_success">Akun berhasil dibuat, Silahkan Login</string>
    <string name="btn_login_description">Tombol masuk</string>
    <string name="add_email_description">Masukan email</string>
    <string name="add_password_description">Masukan password</string>
    <string name="register_email_description">Masukan email</string>
    <string name="register_name_description">Masukan nama pengguna</string>
    <string name="register_password_description">Masukan password</string>
    <string name="btn_register_description">Tombol daftar</string>
    <string name="enter_login_description">Tekan Untuk Masuk</string>
    <string name="enter_register_description">Tekan untuk buat akun</string>
    <string name="add_image_description">Ini adalah gambar yang di tampilkan</string>
    <string name="btn_add_camera">Tombol tambah gambar melalui kamera</string>
    <string name="add_gallery_description">Tombol tambah melalui galeri</string>
    <string name="add_desc_description">Masukan deskripsi gambar</string>
    <string name="btn_upload_description">Tombol unggah gambar</string>
    <string name="next">Lanjut</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="check_maps">Cek Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="detail_image_description">Ini adalah informasi detail pengguna</string>
    <string name="retry">Muat Ulang</string>
</resources>